testsuite/tests/parser/should_fail/RecordDotSyntaxFail13.stderr
RecordDotSyntaxFail13.hs:26:11: error: [GHC-39999]
    • No instance for ‘HasField "foo" Foo (Foo -> Int)’
        arising from a record update
      (maybe you haven't applied a function to enough arguments?)
    • In the second argument of ‘($)’, namely ‘a {foo}’
      In a stmt of a 'do' block: print $ a {foo}
      In the expression:
        do let a = Foo {foo = 12}
           print $ a {foo}

